# vcftools-extras

./: INSTALL.md  Makefile.am  README.md  configure.ac  consenpos  consenpos.1.md
doc/: Makefile.am  vcftools-extras.7.md
src/: Makefile.am  combine-variants  mummer-diff2vcf.py  vcf-combine-variants  vcf-consenpos.py  vcf-set-sample  vcfconvertv3.3_tov4.1.py
test/: Makefile.am  combine-variants.test
test/data/: snp-mnp-terminal-variant.pass.vcf  snp-mnp-terminal-variant.vcf  snp-mnp.pass.vcf  snp-mnp.vcf  snp-mnv.2.pass.vcf  snp-mnv.2.vcf
